--- a/.github/workflows/x86_64.yml
+++ b/.github/workflows/x86_64.yml
@@ -1,4 +1,4 @@
-name: x86_64 OpenWrt Build
+name: x86_64 OpenWrt 编译
 
 on:
   workflow_dispatch:
@@ -28,6 +28,7 @@ env:
   UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: true
   UPLOAD_RELEASE: true
+  WORKDIR: /mnt/openwrt_workdir
   TZ: Asia/Shanghai
 
 jobs:
@@ -36,15 +37,15 @@ jobs:
 
     steps:
       #-------------------------------------------------------------
-      # 1. Checkout 仓库
+      # 1. 检出仓库
       #-------------------------------------------------------------
-      - name: Checkout
+      - name: 检出仓库
         uses: actions/checkout@v4
 
       #-------------------------------------------------------------
-      # 2. 清理系统环境 + 安装必要依赖
+      # 2. 初始化系统环境并安装依赖
       #-------------------------------------------------------------
-      - name: Initialization environment
+      - name: 初始化系统环境
         env:
           DEBIAN_FRONTEND: noninteractive
         run: |
@@ -54,58 +55,56 @@ jobs:
           sudo -E apt-get -qq autoremove --purge
           sudo -E apt-get -qq clean
           sudo timedatectl set-timezone "$TZ"
-          sudo mkdir -p /mnt/workdir
-          sudo chown $USER:$GROUPS /mnt/workdir
-
+          sudo mkdir -p $WORKDIR
+          sudo chown $USER:$GROUPS $WORKDIR
           # 释放磁盘空间
           sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /opt/hostedtoolcache/CodeQL
           sudo docker image prune -a -f
-
           df -hT
 
-      - name: Check space usage
+      - name: 检查磁盘空间
         run: df -hT
 
       #-------------------------------------------------------------
       # 3. 克隆 OpenWrt 源码
       #-------------------------------------------------------------
-      - name: Clone source code
-        working-directory: /mnt/workdir
+      - name: 克隆 OpenWrt 源码
+        working-directory: ${{ env.WORKDIR }}
         run: |
           git clone --depth 1 -b $REPO_BRANCH $REPO_URL openwrt
-          ln -sf /mnt/workdir/openwrt $GITHUB_WORKSPACE/openwrt
+          ln -sf $WORKDIR/openwrt $GITHUB_WORKSPACE/openwrt
 
       #-------------------------------------------------------------
       # 4. 使用 cache 加速编译
       #-------------------------------------------------------------
-      - name: Cache
+      - name: 缓存编译
         uses: stupidloud/cachewrtbuild@main
         with:
           ccache: 'true'
           mixkey: 'x86'
           prefix: 'openwrt'
 
-      - name: Check space usage
+      - name: 检查磁盘空间
         run: df -hT
 
       #-------------------------------------------------------------
       # 5. 更新 feeds
       #-------------------------------------------------------------
-      - name: Update and install feeds
+      - name: 更新并安装 feeds
         run: |
-          cd openwrt
+          cd $WORKDIR/openwrt
           ./scripts/feeds update -a
           ./scripts/feeds install -a
 
-      - name: Check space usage
+      - name: 检查磁盘空间
         run: df -hT
 
       #-------------------------------------------------------------
       # 6. 自定义 feeds 和脚本
       #-------------------------------------------------------------
-      - name: Load custom feeds
+      - name: 加载自定义 feeds 和脚本
         run: |
-          cd openwrt
+          cd $WORKDIR/openwrt
           [ -e $GITHUB_WORKSPACE/$FEEDS_CONF ] && mv $GITHUB_WORKSPACE/$FEEDS_CONF feeds.conf.default
           chmod +x $GITHUB_WORKSPACE/$SYS_CONF_SH
           bash $GITHUB_WORKSPACE/$SYS_CONF_SH
@@ -113,9 +112,9 @@ jobs:
       #-------------------------------------------------------------
       # 7. 加载自定义配置和 package.sh
       #-------------------------------------------------------------
-      - name: Load custom configuration
+      - name: 加载自定义配置和 package.sh
         run: |
-          cd openwrt
+          cd $WORKDIR/openwrt
           [ -e $GITHUB_WORKSPACE/files ] && mv $GITHUB_WORKSPACE/files files
           [ -e $GITHUB_WORKSPACE/$CONFIG_FILE ] && mv $GITHUB_WORKSPACE/$CONFIG_FILE .config
           chmod +x $GITHUB_WORKSPACE/$PACKS
@@ -124,33 +123,33 @@ jobs:
       #-------------------------------------------------------------
       # 8. 自动注入 LAN IP + PPPoE 信息
       #-------------------------------------------------------------
-      - name: Set LAN IP and PPPoE account
+      - name: 自动注入 LAN IP 和 PPPoE
         run: |
-          mkdir -p openwrt/files/etc/uci-defaults
-          printf '#!/bin/sh\n' > openwrt/files/etc/uci-defaults/99-set-network
-          printf '# 自动注入 LAN IP + PPPoE 信息\n' >> openwrt/files/etc/uci-defaults/99-set-network
-          printf 'sed -i "s/192.168.1.1/${{ github.event.inputs.lan_ip }}/g" /etc/config/network\n' >> openwrt/files/etc/uci-defaults/99-set-network
-          printf 'uci set network.wan.proto="pppoe"\n' >> openwrt/files/etc/uci-defaults/99-set-network
-          printf 'uci set network.wan.username="${{ github.event.inputs.pppoe_user }}"\n' >> openwrt/files/etc/uci-defaults/99-set-network
-          printf 'uci set network.wan.password="${{ github.event.inputs.pppoe_pass }}"\n' >> openwrt/files/etc/uci-defaults/99-set-network
-          printf 'uci commit network\n' >> openwrt/files/etc/uci-defaults/99-set-network
-          printf 'exit 0\n' >> openwrt/files/etc/uci-defaults/99-set-network
+          mkdir -p $WORKDIR/openwrt/files/etc/uci-defaults
+          printf '#!/bin/sh\n' > $WORKDIR/openwrt/files/etc/uci-defaults/99-set-network
+          printf '# 自动注入 LAN IP + PPPoE 信息\n' >> $WORKDIR/openwrt/files/etc/uci-defaults/99-set-network
+          printf 'sed -i "s/192.168.1.1/${{ github.event.inputs.lan_ip }}/g" /etc/config/network\n' >> $WORKDIR/openwrt/files/etc/uci-defaults/99-set-network
+          printf 'uci set network.wan.proto="pppoe"\n' >> $WORKDIR/openwrt/files/etc/uci-defaults/99-set-network
+          printf 'uci set network.wan.username="${{ github.event.inputs.pppoe_user }}"\n' >> $WORKDIR/openwrt/files/etc/uci-defaults/99-set-network
+          printf 'uci set network.wan.password="${{ github.event.inputs.pppoe_pass }}"\n' >> $WORKDIR/openwrt/files/etc/uci-defaults/99-set-network
+          printf 'uci commit network\n' >> $WORKDIR/openwrt/files/etc/uci-defaults/99-set-network
+          printf 'exit 0\n' >> $WORKDIR/openwrt/files/etc/uci-defaults/99-set-network
 
       #-------------------------------------------------------------
       # 9. 扩展驱动
       #-------------------------------------------------------------
-      - name: Extend Driver
+      - name: 扩展驱动
         if: env.EXTEND_DRIVER == 'true'
         run: |
-          cd openwrt
+          cd $WORKDIR/openwrt
           cat $GITHUB_WORKSPACE/configs/Driver.config >> .config
 
       #-------------------------------------------------------------
       # 10. 最终修改配置
       #-------------------------------------------------------------
-      - name: Modify configuration
+      - name: 修改最终配置
         run: |
-          cd openwrt
+          cd $WORKDIR/openwrt
           cat $GITHUB_WORKSPACE/$EXTERNAL_FILE >> .config
           make defconfig
           sed -i '/CONFIG_DEFAULT_luci/d' .config
@@ -159,22 +158,22 @@ jobs:
       #-------------------------------------------------------------
       # 11. 下载 dl 包
       #-------------------------------------------------------------
-      - name: Download packages
+      - name: 下载依赖包
         run: |
-          cd openwrt
+          cd $WORKDIR/openwrt
           make download -j$(nproc)
           find dl -size -1024c -exec rm -f {} \;
 
-      - name: Check space usage
+      - name: 检查磁盘空间
         run: df -hT
 
       #-------------------------------------------------------------
-      # 12. 编译 OpenWrt 固件
+      # 12. 编译固件
       #-------------------------------------------------------------
-      - name: Compile firmware
+      - name: 编译 OpenWrt 固件
         id: compile
         run: |
-          cd openwrt
+          cd $WORKDIR/openwrt
           echo "$(nproc) thread compile"
           make -j$(nproc) V=s || make -j4 V=s
           echo "status=success" >> $GITHUB_OUTPUT
@@ -185,31 +184,31 @@ jobs:
       #-------------------------------------------------------------
       # 13. 清理编译缓存
       #-------------------------------------------------------------
-      - name: Cleanup OpenWrt build cache
+      - name: 清理编译缓存
         if: steps.compile.outputs.status == 'success'
         run: |
-          cd openwrt
+          cd $WORKDIR/openwrt
           rm -rf build_dir staging_dir tmp bin/packages .ccache
           df -hT
 
       #-------------------------------------------------------------
       # 14. 上传 bin 目录（可选）
       #-------------------------------------------------------------
-      - name: Upload bin directory
+      - name: 上传 bin 目录
         uses: actions/upload-artifact@main
         if: steps.compile.outputs.status == 'success' && env.UPLOAD_BIN_DIR == 'true'
         with:
           name: OpenWrt_bin${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}
-          path: openwrt/bin
+          path: $WORKDIR/openwrt/bin
 
       #-------------------------------------------------------------
       # 15. 整理固件目录
       #-------------------------------------------------------------
-      - name: Organize files
+      - name: 整理固件目录
         id: organize
         if: steps.compile.outputs.status == 'success' && env.UPLOAD_FIRMWARE == 'true'
         run: |
-          cd openwrt/bin/targets/*/*
+          cd $WORKDIR/openwrt/bin/targets/*/*
           rm -rf packages
           echo "FIRMWARE=$PWD" >> $GITHUB_ENV
           echo "status=success" >> $GITHUB_OUTPUT
@@ -217,7 +216,7 @@ jobs:
       #-------------------------------------------------------------
       # 16. 上传固件到 Artifact
       #-------------------------------------------------------------
-      - name: Upload firmware directory
+      - name: 上传固件到 Artifact
         uses: actions/upload-artifact@main
         if: steps.organize.outputs.status == 'success'
         with:
@@ -227,7 +226,7 @@ jobs:
       #-------------------------------------------------------------
       # 17. 生成 Release tag
       #-------------------------------------------------------------
-      - name: Generate release tag
+      - name: 生成 Release tag
         id: tag
         if: steps.compile.outputs.status == 'success' && env.UPLOAD_RELEASE == 'true'
         run: |
@@ -238,14 +237,14 @@ jobs:
       #-------------------------------------------------------------
       # 18. Release 内容生成
       #-------------------------------------------------------------
-      - name: Generate release body
+      - name: 生成 Release 内容
         run: |
           echo "![](https://img.shields.io/github/downloads/${{ github.repository }}/${{ steps.tag.outputs.release_tag }}/total?style=flat-square)" >> release.txt
 
       #-------------------------------------------------------------
       # 19. 上传固件到 Release
       #-------------------------------------------------------------
-      - name: Upload firmware to release
+      - name: 上传固件到 Release
         uses: softprops/action-gh-release@v1
         if: steps.tag.outputs.status == 'success'
         env:
