--- a/.github/workflows/x86_64Lite.yml
+++ b/.github/workflows/x86_64Lite.yml
@@ -1,7 +1,6 @@
-name: x86_64Lite
+name: x86_64 OpenWrt 编译
 
 on:
-  repository_dispatch:
   workflow_dispatch:
     inputs:
       lan_ip:
@@ -14,6 +13,7 @@ on:
       pppoe_pass:
         description: 'PPPoE 密码'
         required: true
+  repository_dispatch:
 
 env:
   OPNAME: 'x86_64Lite'
@@ -28,6 +28,7 @@ env:
   UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: true
   UPLOAD_RELEASE: true
+  WORKDIR: /mnt/openwrt_workdir
   TZ: Asia/Shanghai
 
 jobs:
@@ -35,135 +36,181 @@ jobs:
     runs-on: ubuntu-22.04
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@v4
+      # 1. 检出仓库
+      - name: 检出仓库
+        uses: actions/checkout@v4
 
-    - name: Initialization environment
-      env:
-        DEBIAN_FRONTEND: noninteractive
-      run: |
-        sudo rm -rf /etc/apt/sources.list.d/* 
-        sudo -E apt-get -qq update
-        sudo -E apt-get -qq install $(curl -fsSL https://raw.githubusercontent.com/bigbugcc/openwrts/master/openwrt-env)
-        sudo -E apt-get -qq autoremove --purge
-        sudo -E apt-get -qq clean
-        sudo timedatectl set-timezone "$TZ"
-        sudo mkdir -p /mnt/workdir
-        sudo chown $USER:$GROUPS /mnt/workdir
+      # 2. 初始化系统环境
+      - name: 初始化系统环境
+        env:
+          DEBIAN_FRONTEND: noninteractive
+        run: |
+          sudo rm -rf /etc/apt/sources.list.d/*
+          sudo -E apt-get -qq update
+          sudo -E apt-get -qq install $(curl -fsSL https://raw.githubusercontent.com/bigbugcc/openwrts/master/openwrt-env)
+          sudo -E apt-get -qq autoremove --purge
+          sudo -E apt-get -qq clean
+          sudo timedatectl set-timezone "$TZ"
+          sudo mkdir -p $WORKDIR
+          sudo chown $USER:$GROUPS $WORKDIR
+          sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /opt/hostedtoolcache/CodeQL
+          sudo docker image prune -a -f
+          df -hT
 
-    - name: Clone source code
-      working-directory: /mnt/workdir
-      run: |
-        git clone --depth 1 -b $REPO_BRANCH $REPO_URL openwrt
-        ln -sf /mnt/workdir/openwrt $GITHUB_WORKSPACE/openwrt
+      - name: 检查磁盘空间
+        run: df -hT
 
-    - name: Cache
-      uses: stupidloud/cachewrtbuild@main
-      with:
-        ccache: 'true'
-        mixkey: 'x86'
-        prefix: 'openwrt'
+      # 3. 克隆 OpenWrt 源码
+      - name: 克隆 OpenWrt 源码
+        working-directory: ${{ env.WORKDIR }}
+        run: |
+          git clone --depth 1 -b $REPO_BRANCH $REPO_URL openwrt
+          ln -sf $WORKDIR/openwrt $GITHUB_WORKSPACE/openwrt
 
-    - name: Update and install feeds
-      run: |
-        cd openwrt
-        ./scripts/feeds update -a
-        ./scripts/feeds install -a
+      # 4. 使用 cache 加速编译
+      - name: 缓存编译
+        uses: stupidloud/cachewrtbuild@main
+        with:
+          ccache: 'true'
+          mixkey: 'x86'
+          prefix: 'openwrt'
 
-    - name: Load custom feeds
-      run: |
-        cd openwrt
-        [ -e $GITHUB_WORKSPACE/$FEEDS_CONF ] && mv $GITHUB_WORKSPACE/$FEEDS_CONF feeds.conf.default
-        chmod +x $GITHUB_WORKSPACE/$SYS_CONF_SH
-        bash $GITHUB_WORKSPACE/$SYS_CONF_SH
+      - name: 检查磁盘空间
+        run: df -hT
 
-    - name: Load custom configuration
-      run: |
-        cd openwrt
-        [ -e $GITHUB_WORKSPACE/files ] && mv $GITHUB_WORKSPACE/files files
-        [ -e $GITHUB_WORKSPACE/$CONFIG_FILE ] && mv $GITHUB_WORKSPACE/$CONFIG_FILE .config
-        chmod +x $GITHUB_WORKSPACE/$PACKS
-        bash $GITHUB_WORKSPACE/$PACKS
+      # 5. 更新 feeds
+      - name: 更新并安装 feeds
+        run: |
+          cd $WORKDIR/openwrt
+          ./scripts/feeds update -a
+          ./scripts/feeds install -a
 
-    - name: Set LAN IP and PPPoE account
-      run: |
-        mkdir -p openwrt/files/etc/uci-defaults
-        cat <<EOF > openwrt/files/etc/uci-defaults/99-set-network
-        #!/bin/sh
-        sed -i 's/192.168.1.1/${{ github.event.inputs.lan_ip }}/g' /etc/config/network
-        uci set network.wan.proto='pppoe'
-        uci set network.wan.username='${{ github.event.inputs.pppoe_user }}'
-        uci set network.wan.password='${{ github.event.inputs.pppoe_pass }}'
-        uci commit network
-        exit 0
-        EOF
+      - name: 检查磁盘空间
+        run: df -hT
 
+      # 6. 自定义 feeds 和脚本
+      - name: 加载自定义 feeds 和脚本
+        run: |
+          cd $WORKDIR/openwrt
+          [ -e $GITHUB_WORKSPACE/$FEEDS_CONF ] && mv $GITHUB_WORKSPACE/$FEEDS_CONF feeds.conf.default
+          chmod +x $GITHUB_WORKSPACE/$SYS_CONF_SH
+          bash $GITHUB_WORKSPACE/$SYS_CONF_SH
 
-    - name: Modify configuration
-      run: |
-        cd openwrt
-        cat $GITHUB_WORKSPACE/$EXTERNAL_FILE >> .config
-        make defconfig
-        sed -i '/CONFIG_DEFAULT_luci/d' .config
-        cat .config
+      # 7. 加载自定义配置和 package.sh
+      - name: 加载自定义配置和 package.sh
+        run: |
+          cd $WORKDIR/openwrt
+          [ -e $GITHUB_WORKSPACE/files ] && mv $GITHUB_WORKSPACE/files files
+          [ -e $GITHUB_WORKSPACE/$CONFIG_FILE ] && mv $GITHUB_WORKSPACE/$CONFIG_FILE .config
+          chmod +x $GITHUB_WORKSPACE/$PACKS
+          bash $GITHUB_WORKSPACE/$PACKS
 
-    - name: Download packages
-      run: |
-        cd openwrt
-        make download -j$(nproc)
-        find dl -size -1024c -exec ls -l {} \;
-        find dl -size -1024c -exec rm -f {} \;
+      # 8. 自动注入 LAN IP + PPPoE 信息
+      - name: 自动注入 LAN IP 和 PPPoE
+        run: |
+          mkdir -p $WORKDIR/openwrt/files/etc/uci-defaults
+          printf '#!/bin/sh\n' > $WORKDIR/openwrt/files/etc/uci-defaults/99-set-network
+          printf '# 自动注入 LAN IP + PPPoE 信息\n' >> $WORKDIR/openwrt/files/etc/uci-defaults/99-set-network
+          printf 'sed -i "s/192.168.1.1/${{ github.event.inputs.lan_ip }}/g" /etc/config/network\n' >> $WORKDIR/openwrt/files/etc/uci-defaults/99-set-network
+          printf 'uci set network.wan.proto="pppoe"\n' >> $WORKDIR/openwrt/files/etc/uci-defaults/99-set-network
+          printf 'uci set network.wan.username="${{ github.event.inputs.pppoe_user }}"\n' >> $WORKDIR/openwrt/files/etc/uci-defaults/99-set-network
+          printf 'uci set network.wan.password="${{ github.event.inputs.pppoe_pass }}"\n' >> $WORKDIR/openwrt/files/etc/uci-defaults/99-set-network
+          printf 'uci commit network\n' >> $WORKDIR/openwrt/files/etc/uci-defaults/99-set-network
+          printf 'exit 0\n' >> $WORKDIR/openwrt/files/etc/uci-defaults/99-set-network
 
-    - name: Compile firmware
-      id: compile
-      run: |
-        cd openwrt
-        echo "$(nproc) thread compile"
-        make -j$(nproc) V=s || make -j4 V=s
-        echo "status=success" >> $GITHUB_OUTPUT
-        echo "DEVICE_NAME=x86_64Lite" >> $GITHUB_ENV
-        echo "FILE_DATE=_$(date +'%Y%m%d%H%M')" >> $GITHUB_ENV
+      # 9. 扩展驱动（Lite 不启用）
+      - name: 扩展驱动
+        if: env.EXTEND_DRIVER == 'true'
+        run: |
+          cd $WORKDIR/openwrt
+          cat $GITHUB_WORKSPACE/configs/Driver.config >> .config
 
-    - name: Check space usage
-      if: (!cancelled())
-      run: df -hT
+      # 10. 最终修改配置
+      - name: 修改最终配置
+        run: |
+          cd $WORKDIR/openwrt
+          cat $GITHUB_WORKSPACE/$EXTERNAL_FILE >> .config
+          make defconfig
+          sed -i '/CONFIG_DEFAULT_luci/d' .config
+          cat .config
 
-    - name: Organize firmware files
-      id: organize
-      if: steps.compile.outputs.status == 'success' && env.UPLOAD_FIRMWARE == 'true' && !cancelled()
-      run: |
-        cd openwrt/bin/targets/*/*
-        rm -rf packages
-        echo "FIRMWARE=$PWD" >> $GITHUB_ENV
-        echo "status=success" >> $GITHUB_OUTPUT
+      # 11. 下载 dl 包
+      - name: 下载依赖包
+        run: |
+          cd $WORKDIR/openwrt
+          make download -j$(nproc)
+          find dl -size -1024c -exec rm -f {} \;
 
-    - name: Upload firmware
-      uses: actions/upload-artifact@main
-      if: steps.organize.outputs.status == 'success' && !cancelled()
-      with:
-        name: OpenWrt_firmware${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}
-        path: ${{ env.FIRMWARE }}
+      - name: 检查磁盘空间
+        run: df -hT
 
-    - name: Generate release tag
-      id: tag
-      if: steps.compile.outputs.status == 'success' && env.UPLOAD_RELEASE == 'true' && !cancelled()
-      run: |
-        echo "release_tag=$(date +"%Y.%m.%d-%H%M%S")" >> $GITHUB_OUTPUT
-        touch release.txt
-        echo "status=success" >> $GITHUB_OUTPUT
+      # 12. 编译固件
+      - name: 编译 OpenWrt 固件
+        id: compile
+        run: |
+          cd $WORKDIR/openwrt
+          echo "$(nproc) thread compile"
+          make -j$(nproc) V=s || make -j4 V=s
+          echo "status=success" >> $GITHUB_OUTPUT
+          echo "DEVICE_NAME=_x86_64Lite" >> $GITHUB_ENV
+          echo "FILE_DATE=_$(date +'%Y%m%d%H%M')" >> $GITHUB_ENV
 
-    - name: Generate release body
-      if: steps.compile.outputs.status == 'success' && !cancelled()
-      run: |
-        echo "![](https://img.shields.io/github/downloads/${{ github.repository }}/${{ steps.tag.outputs.release_tag }}/total?style=flat-square)" >> release.txt
+      # 13. 清理编译缓存
+      - name: 清理编译缓存
+        if: steps.compile.outputs.status == 'success'
+        run: |
+          cd $WORKDIR/openwrt
+          rm -rf build_dir staging_dir tmp bin/packages .ccache
+          df -hT
 
-    - name: Upload firmware to release
-      uses: softprops/action-gh-release@v1
-      if: steps.tag.outputs.status == 'success' && !cancelled()
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        name: ${{ env.OPNAME }}
-        tag_name: ${{ steps.tag.outputs.release_tag }}
-        body_path: release.txt
-        files: ${{ env.FIRMWARE }}/*
+      # 14. 上传 bin 目录（可选）
+      - name: 上传 bin 目录
+        uses: actions/upload-artifact@main
+        if: steps.compile.outputs.status == 'success' && env.UPLOAD_BIN_DIR == 'true'
+        with:
+          name: OpenWrt_bin${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}
+          path: $WORKDIR/openwrt/bin
+
+      # 15. 整理固件目录
+      - name: 整理固件目录
+        id: organize
+        if: steps.compile.outputs.status == 'success' && env.UPLOAD_FIRMWARE == 'true'
+        run: |
+          cd $WORKDIR/openwrt/bin/targets/*/*
+          rm -rf packages
+          echo "FIRMWARE=$PWD" >> $GITHUB_ENV
+          echo "status=success" >> $GITHUB_OUTPUT
+
+      # 16. 上传固件到 Artifact
+      - name: 上传固件到 Artifact
+        uses: actions/upload-artifact@main
+        if: steps.organize.outputs.status == 'success'
+        with:
+          name: OpenWrt_firmware${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}
+          path: ${{ env.FIRMWARE }}
+
+      # 17. 生成 Release tag
+      - name: 生成 Release tag
+        id: tag
+        if: steps.compile.outputs.status == 'success' && env.UPLOAD_RELEASE == 'true'
+        run: |
+          echo "release_tag=$(date +"%Y.%m.%d-%H%M%S")" >> $GITHUB_OUTPUT
+          touch release.txt
+          echo "status=success" >> $GITHUB_OUTPUT
+
+      # 18. Release 内容生成
+      - name: 生成 Release 内容
+        run: |
+          echo "![](https://img.shields.io/github/downloads/${{ github.repository }}/${{ steps.tag.outputs.release_tag }}/total?style=flat-square)" >> release.txt
+
+      # 19. 上传固件到 Release
+      - name: 上传固件到 Release
+        uses: softprops/action-gh-release@v1
+        if: steps.tag.outputs.status == 'success'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          name: ${{ env.OPNAME }}
+          tag_name: ${{ steps.tag.outputs.release_tag }}
+          body_path: release.txt
+          files: ${{ env.FIRMWARE }}/*
