Delete conflicting package 'autosamba'
Remove conflicting package 'autosamba' from feeds.

--- a/.github/workflows/x86_64.yml
+++ b/.github/workflows/x86_64.yml
@@ -100,6 +100,15 @@ jobs:
         run: df -hT
 
       #-------------------------------------------------------------
+      # 5.5 删除冲突包 autosamba
+      #-------------------------------------------------------------
+      - name: 删除冲突包 autosamba
+        run: |
+          cd $WORKDIR/openwrt
+          rm -rf package/feeds/packages/autosamba
+
+
+      #-------------------------------------------------------------
       # 6. 自定义 feeds 和脚本
       #-------------------------------------------------------------
       - name: 加载自定义 feeds 和脚本
