--- a/configs/luci/Standard.config
+++ b/configs/luci/Standard.config
@@ -66,6 +66,7 @@ CONFIG_PACKAGE_luci-app-wol=y
 CONFIG_PACKAGE_luci-app-zerotier=y
 CONFIG_PACKAGE_luci-app-smartdns=y
 CONFIG_PACKAGE_luci-app-tailscale=y
+CONFIG_PACKAGE_luci-app-ddns-go=y
 # end of Applications
 
 # Lang Support
