--- a/configs/luci/Lite.config
+++ b/configs/luci/Lite.config
@@ -22,7 +22,34 @@ CONFIG_KERNEL_PERF_EVENTS=y              # 启用内核性能事件
 
 CONFIG_CGROUPFS_MOUNT_KERNEL_CGROUPS=y   # 挂载内核 cgroup 文件系统
 
+
 ########################################
+# IPv6 内核支持
+########################################
+CONFIG_IPV6=y                             # 启用内核 IPv6 核心功能（默认开启）
+CONFIG_IPV6_MULTIPLE_TABLES=y             # 支持多路由表
+CONFIG_IPV6_PRIVACY=y                      # 启用隐私扩展（临时 IPv6 地址）
+CONFIG_IPV6_ROUTER_PREF=y                  # 支持路由首选项
+CONFIG_IPV6_SUBTREES=y                     # 支持 IPv6 子树路由
+CONFIG_IPV6_TUNNEL=y                       # 支持 IPv6 隧道
+CONFIG_IPV6_TUNNEL_SIT=y                   # 6in4 隧道模块（SIT）
+CONFIG_KMOD_SIT=y                           # SIT 内核模块
+CONFIG_KMOD_IP6TABLES=y                     # IPv6 iptables 内核模块
+CONFIG_KMOD_NF_IPT6=y                       # netfilter IPv6 支持
+CONFIG_IP6_NF_IPTABLES=y                    # IPv6 iptables 用户空间支持
+CONFIG_IP6_NF_FILTER=y                       # IPv6 防火墙过滤支持
+CONFIG_IP6_NF_TARGET_REJECT=y               # IPv6 REJECT 支持
+CONFIG_IP6_NF_NAT=y                         # IPv6 NAT 支持（如果有需要）
+CONFIG_KMOD_UDPTUNNEL6=y                    # UDP over IPv6 隧道
+
+########################################
+# IPv6 LuCI / 协议支持
+########################################
+CONFIG_PACKAGE_luci-proto-ipv6=y            # LuCI IPv6 协议支持
+CONFIG_PACKAGE_ipv6helper=y                 # LuCI IPv6 辅助工具
+########################################
+
+
 # Docker / 容器相关
 ########################################
 CONFIG_DOCKER_CGROUP_OPTIONS=y           # Docker cgroup 支持
