--- a/configs/luci/Lite.config
+++ b/configs/luci/Lite.config
@@ -22,7 +22,7 @@ CONFIG_PACKAGE_TAR_POSIX_ACL=y
 CONFIG_PACKAGE_TAR_XATTR=y
 CONFIG_PACKAGE_TAR_XZ=y
 CONFIG_PACKAGE_TAR_ZSTD=y
-CONFIG_PACKAGE_alist=m
+CONFIG_PACKAGE_alist=y
 CONFIG_PACKAGE_bash=y
 CONFIG_PACKAGE_blkid=y
 CONFIG_PACKAGE_boost=y
@@ -83,14 +83,14 @@ CONFIG_PACKAGE_libzstd=y
 CONFIG_PACKAGE_losetup=y
 CONFIG_PACKAGE_lsblk=y
 CONFIG_PACKAGE_luci-app-advancedplus=y
-CONFIG_PACKAGE_luci-app-advancedsetting=m
-CONFIG_PACKAGE_luci-app-alist=m
+CONFIG_PACKAGE_luci-app-advancedsetting=y
+CONFIG_PACKAGE_luci-app-alist=y
 # CONFIG_PACKAGE_luci-app-ddns is not set
 CONFIG_PACKAGE_luci-app-ddns-go=y
 CONFIG_PACKAGE_luci-app-dockerman=y
 CONFIG_PACKAGE_luci-app-istorex=y
 CONFIG_PACKAGE_luci-app-kucat-config=y
-CONFIG_PACKAGE_luci-app-netwizard=m
+CONFIG_PACKAGE_luci-app-netwizard=y
 CONFIG_PACKAGE_luci-app-partexp=y
 CONFIG_PACKAGE_luci-app-passwall=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Geoview=y
@@ -112,12 +112,12 @@ CONFIG_PACKAGE_luci-app-store=y
 CONFIG_PACKAGE_luci-app-tailscale=y
 CONFIG_PACKAGE_luci-app-webadmin=y
 CONFIG_PACKAGE_luci-i18n-advancedplus-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-advancedsetting-zh-cn=m
-CONFIG_PACKAGE_luci-i18n-alist-zh-cn=m
+CONFIG_PACKAGE_luci-i18n-advancedsetting-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-alist-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-ddns-go-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-dockerman-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-kucat-config-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-netwizard-zh-cn=m
+CONFIG_PACKAGE_luci-i18n-netwizard-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-partexp-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-passwall-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-quickstart-zh-cn=y
