--- a/configs/luci/Lite.config
+++ b/configs/luci/Lite.config
@@ -1,97 +1,89 @@
-CONFIG_CGROUPFS_MOUNT_KERNEL_CGROUPS=y
-CONFIG_DOCKER_CGROUP_OPTIONS=y
-CONFIG_DOCKER_NET_MACVLAN=y
-CONFIG_DOCKER_OPTIONAL_FEATURES=y
-CONFIG_DOCKER_STO_EXT4=y
-CONFIG_KERNEL_CFQ_GROUP_IOSCHED=y
-CONFIG_KERNEL_CGROUP_DEVICE=y
-CONFIG_KERNEL_CGROUP_FREEZER=y
-CONFIG_KERNEL_CGROUP_HUGETLB=y
-CONFIG_KERNEL_CGROUP_NET_PRIO=y
-CONFIG_KERNEL_CGROUP_PERF=y
-CONFIG_KERNEL_HUGETLBFS=y
-CONFIG_KERNEL_HUGETLB_PAGE=y
-CONFIG_KERNEL_MEMCG_SWAP_ENABLED=y
-CONFIG_KERNEL_NET_CLS_CGROUP=y
-CONFIG_KERNEL_PERF_EVENTS=y
-CONFIG_KERNEL_TRANSPARENT_HUGEPAGE=y
-CONFIG_KERNEL_TRANSPARENT_HUGEPAGE_ALWAYS=y
+##################################################
+# 1️⃣ 内核 / cgroup / Docker 相关
+##################################################
+CONFIG_CGROUPFS_MOUNT_KERNEL_CGROUPS=y       # 挂载 cgroup 文件系统
+CONFIG_DOCKER_CGROUP_OPTIONS=y               # Docker cgroup 支持
+CONFIG_DOCKER_NET_MACVLAN=y                  # Docker macvlan 网络
+CONFIG_DOCKER_OPTIONAL_FEATURES=y            # Docker 可选功能
+CONFIG_DOCKER_STO_EXT4=y                     # Docker 存储使用 ext4
+CONFIG_KERNEL_CFQ_GROUP_IOSCHED=y            # CFQ I/O 调度组
+CONFIG_KERNEL_CGROUP_DEVICE=y                # cgroup 设备控制
+CONFIG_KERNEL_CGROUP_FREEZER=y               # cgroup 冻结进程
+CONFIG_KERNEL_CGROUP_HUGETLB=y               # cgroup hugepage
+CONFIG_KERNEL_CGROUP_NET_PRIO=y              # cgroup 网络优先级
+CONFIG_KERNEL_CGROUP_PERF=y                  # cgroup 性能事件
+CONFIG_KERNEL_HUGETLBFS=y                    # hugepage 文件系统
+CONFIG_KERNEL_HUGETLB_PAGE=y                 # hugepage 支持
+CONFIG_KERNEL_MEMCG_SWAP_ENABLED=y           # memory cgroup swap 支持
+CONFIG_KERNEL_NET_CLS_CGROUP=y               # cgroup 网络分类
+CONFIG_KERNEL_PERF_EVENTS=y                  # perf 性能事件
+CONFIG_KERNEL_TRANSPARENT_HUGEPAGE=y         # 透明 hugepage
+CONFIG_KERNEL_TRANSPARENT_HUGEPAGE_ALWAYS=y # 总是启用透明 hugepage
+
+##################################################
+# 2️⃣ IPv6 / 网络协议相关
+##################################################
+CONFIG_IPV6=y                                # 内核 IPv6 支持
+CONFIG_PACKAGE_kmod-ipv6=y                  # 内核 IPv6 模块
+CONFIG_PACKAGE_luci-proto-ipv6=y            # LuCI IPv6 协议支持
+CONFIG_PACKAGE_dhcp6c=y                     # DHCPv6 客户端 (odhcp6c)
+CONFIG_PACKAGE_radvd=y                       # Router Advertisement 守护进程
+CONFIG_IPV6_PRIVACY=y                        # IPv6 隐私扩展
+CONFIG_IPV6_ROUTER_PREF=y                    # 默认路由偏好
+CONFIG_IPV6_ROUTER_ALERT=y                   # IPv6 RA 警告
+CONFIG_IPV6_NDISC_NODETYPE=y                 # NDP 节点类型
+
+##################################################
+# 3️⃣ 文件压缩 / 解压 / 归档工具
+##################################################
 CONFIG_PACKAGE_TAR_BZIP2=y
 CONFIG_PACKAGE_TAR_GZIP=y
 CONFIG_PACKAGE_TAR_POSIX_ACL=y
 CONFIG_PACKAGE_TAR_XATTR=y
 CONFIG_PACKAGE_TAR_XZ=y
 CONFIG_PACKAGE_TAR_ZSTD=y
-CONFIG_PACKAGE_alist=y
-CONFIG_PACKAGE_bash=y
-CONFIG_PACKAGE_blkid=y
-CONFIG_PACKAGE_boost=y
-CONFIG_PACKAGE_boost-program_options=y
-CONFIG_PACKAGE_boost-system=y
-CONFIG_PACKAGE_btrfs-progs=y
+CONFIG_PACKAGE_tar=y
+CONFIG_PACKAGE_xz=y
+CONFIG_PACKAGE_xz-utils=y
 CONFIG_PACKAGE_bzip2=y
-CONFIG_PACKAGE_cgroupfs-mount=y
-CONFIG_PACKAGE_chinadns-ng=y
-CONFIG_PACKAGE_containerd=y
-CONFIG_PACKAGE_coreutils-nohup=y
-CONFIG_PACKAGE_coreutils-stty=y
-CONFIG_PACKAGE_ddns-go=y
-CONFIG_PACKAGE_docker=y
-CONFIG_PACKAGE_dockerd=y
+CONFIG_PACKAGE_unzip=y
+
+##################################################
+# 4️⃣ 文件系统 / 存储工具
+##################################################
+CONFIG_PACKAGE_btrfs-progs=y
 CONFIG_PACKAGE_f2fs-tools=y
 CONFIG_PACKAGE_f2fsck=y
 CONFIG_PACKAGE_fdisk=y
-CONFIG_PACKAGE_fuse-utils=m
-CONFIG_PACKAGE_geoview=y
-CONFIG_PACKAGE_haproxy=y
-CONFIG_PACKAGE_ipt2socks=y
-CONFIG_PACKAGE_kmod-br-netfilter=y
-CONFIG_PACKAGE_kmod-crypto-acompress=y
-CONFIG_PACKAGE_kmod-dummy=y
+CONFIG_PACKAGE_losetup=y
+CONFIG_PACKAGE_lsblk=y
+CONFIG_PACKAGE_parted=y
+CONFIG_PACKAGE_resize2fs=y
+CONFIG_PACKAGE_mount-utils=y
+CONFIG_PACKAGE_mdadm=y
 CONFIG_PACKAGE_kmod-fs-btrfs=y
-CONFIG_PACKAGE_kmod-fuse=m
-CONFIG_PACKAGE_kmod-inet-diag=y
-CONFIG_PACKAGE_kmod-ipt-physdev=y
-CONFIG_PACKAGE_kmod-lib-lzo=y
-CONFIG_PACKAGE_kmod-lib-raid6=y
-CONFIG_PACKAGE_kmod-lib-xor=y
-CONFIG_PACKAGE_kmod-lib-zlib-deflate=y
-CONFIG_PACKAGE_kmod-lib-zstd=y
-CONFIG_PACKAGE_kmod-loop=y
 CONFIG_PACKAGE_kmod-md-mod=y
 CONFIG_PACKAGE_kmod-md-raid0=y
 CONFIG_PACKAGE_kmod-md-raid1=y
 CONFIG_PACKAGE_kmod-md-raid10=y
-CONFIG_PACKAGE_kmod-netlink-diag=y
-CONFIG_PACKAGE_kmod-nf-ipvs=y
-CONFIG_PACKAGE_kmod-veth=y
-CONFIG_PACKAGE_libacl=y
-CONFIG_PACKAGE_libatomic=y
-CONFIG_PACKAGE_libattr=y
-CONFIG_PACKAGE_libbz2=y
-CONFIG_PACKAGE_libcap=y
-CONFIG_PACKAGE_libfuse=m
-CONFIG_PACKAGE_libltdl=y
-CONFIG_PACKAGE_liblua5.3=y
-CONFIG_PACKAGE_liblzma=y
-CONFIG_PACKAGE_liblzo=y
-CONFIG_PACKAGE_libparted=y
-CONFIG_PACKAGE_libseccomp=y
-CONFIG_PACKAGE_libuv=y
-CONFIG_PACKAGE_libwebsockets-full=y
-CONFIG_PACKAGE_libzstd=y
-CONFIG_PACKAGE_losetup=y
-CONFIG_PACKAGE_lsblk=y
-CONFIG_PACKAGE_luci-app-advancedplus=y
-CONFIG_PACKAGE_luci-app-advancedsetting=y
-CONFIG_PACKAGE_luci-app-alist=y
-# CONFIG_PACKAGE_luci-app-ddns is not set
-CONFIG_PACKAGE_luci-app-ddns-go=y
+CONFIG_PACKAGE_kmod-loop=y
+CONFIG_PACKAGE_kmod-dummy=y
+CONFIG_PACKAGE_kmod-br-netfilter=y
+
+##################################################
+# 5️⃣ 容器 / Docker 相关
+##################################################
+CONFIG_PACKAGE_docker=y
+CONFIG_PACKAGE_dockerd=y
+CONFIG_PACKAGE_containerd=y
+CONFIG_PACKAGE_runc=y
+CONFIG_PACKAGE_tini=y
+CONFIG_PACKAGE_luci-lib-docker=y
 CONFIG_PACKAGE_luci-app-dockerman=y
-CONFIG_PACKAGE_luci-app-istorex=y
-CONFIG_PACKAGE_luci-app-kucat-config=y
-CONFIG_PACKAGE_luci-app-netwizard=y
-CONFIG_PACKAGE_luci-app-partexp=y
+
+##################################################
+# 6️⃣ 网络代理 / VPN / 防火墙
+##################################################
 CONFIG_PACKAGE_luci-app-passwall=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Geoview=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Haproxy=y
@@ -104,41 +96,51 @@ CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_Plus=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Plugin=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray=y
 CONFIG_PACKAGE_luci-app-passwall_Iptables_Transparent_Proxy=y
-CONFIG_PACKAGE_luci-app-quickstart=y
 CONFIG_PACKAGE_luci-app-smartdns=y
 CONFIG_PACKAGE_luci-app-socat=y
-# CONFIG_PACKAGE_luci-app-ssr-plus is not set
-CONFIG_PACKAGE_luci-app-store=y
 CONFIG_PACKAGE_luci-app-tailscale=y
+CONFIG_PACKAGE_luci-app-quickstart=y
+CONFIG_PACKAGE_luci-app-netwizard=y
+CONFIG_PACKAGE_luci-app-partexp=y
+CONFIG_PACKAGE_luci-app-alist=y
+CONFIG_PACKAGE_luci-app-store=y
 CONFIG_PACKAGE_luci-app-webadmin=y
-CONFIG_PACKAGE_luci-i18n-advancedplus-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-advancedsetting-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-alist-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-ddns-go-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-dockerman-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-kucat-config-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-netwizard-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-partexp-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-passwall-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-quickstart-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-smartdns-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-socat-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-tailscale-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-quickstart-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-netwizard-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-partexp-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-alist-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-webadmin-zh-cn=y
-CONFIG_PACKAGE_luci-lib-docker=y
+CONFIG_PACKAGE_luci-i18n-ddns-go-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-dockerman-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-kucat-config-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-advancedplus-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-advancedsetting-zh-cn=y
+
+##################################################
+# 7️⃣ LuCI / 主题 / 工具库
+##################################################
 CONFIG_PACKAGE_luci-lib-taskd=y
 CONFIG_PACKAGE_luci-lib-xterm=y
 CONFIG_PACKAGE_luci-theme-argon=y
 CONFIG_PACKAGE_luci-theme-kucat=y
 CONFIG_PACKAGE_luci-theme-material3=y
-CONFIG_PACKAGE_mdadm=y
-CONFIG_PACKAGE_mount-utils=y
-CONFIG_PACKAGE_parted=y
-CONFIG_PACKAGE_quickstart=y
-CONFIG_PACKAGE_resize2fs=y
-CONFIG_PACKAGE_runc=y
-CONFIG_PACKAGE_script-utils=y
+CONFIG_PACKAGE_luci-app-advancedplus=y
+CONFIG_PACKAGE_luci-app-advancedsetting=y
+CONFIG_PACKAGE_luci-app-kucat-config=y
+CONFIG_PACKAGE_luci-app-istorex=y
+
+##################################################
+# 8️⃣ 系统 / 基础工具 / shell
+##################################################
+CONFIG_PACKAGE_bash=y
+CONFIG_PACKAGE_coreutils-nohup=y
+CONFIG_PACKAGE_coreutils-stty=y
 CONFIG_PACKAGE_shadow=y
+CONFIG_PACKAGE_shadow-all=y
 CONFIG_PACKAGE_shadow-chage=y
 CONFIG_PACKAGE_shadow-chfn=y
 CONFIG_PACKAGE_shadow-chgpasswd=y
@@ -172,26 +174,84 @@ CONFIG_PACKAGE_shadow-su=y
 CONFIG_PACKAGE_shadow-useradd=y
 CONFIG_PACKAGE_shadow-userdel=y
 CONFIG_PACKAGE_shadow-usermod=y
-CONFIG_PACKAGE_shadow-utils=y
-CONFIG_PACKAGE_shadow-vipw=y
+CONFIG_PACKAGE-shadow-utils=y
+CONFIG_PACKAGE-shadow-vipw=y
+
+##################################################
+# 9️⃣ 安全 / 加密 / 系统库
+##################################################
+CONFIG_PACKAGE_kmod-crypto-acompress=y
+CONFIG_PACKAGE_libcap=y
+CONFIG_PACKAGE_libseccomp=y
+CONFIG_PACKAGE_libltdl=y
+CONFIG_PACKAGE_libuv=y
+CONFIG_PACKAGE_libwebsockets-full=y
+CONFIG_PACKAGE_libzstd=y
+CONFIG_PACKAGE_liblzo=y
+CONFIG_PACKAGE_liblzma=y
+CONFIG_PACKAGE_libatomic=y
+CONFIG_PACKAGE_libattr=y
+CONFIG_PACKAGE_libbz2=y
+CONFIG_PACKAGE_libparted=y
+CONFIG_PACKAGE_liblua5.3=y
+CONFIG_PACKAGE_kmod-lib-lzo=y
+CONFIG_PACKAGE_kmod-lib-raid6=y
+CONFIG_PACKAGE_kmod-lib-xor=y
+CONFIG_PACKAGE-kmod-lib-zlib-deflate=y
+CONFIG_PACKAGE_kmod-lib-zstd=y
+
+##################################################
+# 10️⃣ 代理 / VPN / 网络工具
+##################################################
 CONFIG_PACKAGE_shadowsocks-libev-ss-local=y
 CONFIG_PACKAGE_shadowsocks-libev-ss-redir=y
 CONFIG_PACKAGE_sing-box=y
-CONFIG_PACKAGE_smartd=y
-CONFIG_PACKAGE_smartdns=y
-CONFIG_PACKAGE_smartmontools=y
-CONFIG_PACKAGE_socat=y
-CONFIG_PACKAGE_tailscale=y
-CONFIG_PACKAGE_tar=y
-CONFIG_PACKAGE_taskd=y
-CONFIG_PACKAGE_tini=y
 CONFIG_PACKAGE_trojan-plus=y
-CONFIG_PACKAGE_ttyd=y
-CONFIG_PACKAGE_unzip=y
 CONFIG_PACKAGE_v2ray-plugin=y
+CONFIG_PACKAGE_shadowsocksr-libev-ssr-check=y
+CONFIG_PACKAGE_shadowsocksr-libev-ssr-server=y
+CONFIG_PACKAGE_ddns-go=y
+CONFIG_PACKAGE_chinadns-ng=y
+CONFIG_PACKAGE_ipt2socks=y
+CONFIG_PACKAGE_mosdns=y
+CONFIG_PACKAGE_dns2tcp=y
+CONFIG_PACKAGE_nping=y
+CONFIG_PACKAGE_jq=y
+
+##################################################
+# 11️⃣ 系统服务 / 工具
+##################################################
+CONFIG_PACKAGE_script-utils=y
+CONFIG_PACKAGE_taskd=y
+CONFIG_PACKAGE_quickstart=y
+CONFIG_PACKAGE_alist=y
+CONFIG_PACKAGE_coreutils-nohup=y
+CONFIG_PACKAGE_coreutils-stty=y
+CONFIG_PACKAGE_fdisk=y
+CONFIG_PACKAGE_mount-utils=y
+CONFIG_PACKAGE_parted=y
+CONFIG_PACKAGE_resize2fs=y
+CONFIG_PACKAGE_tar=y
 CONFIG_PACKAGE_xz=y
 CONFIG_PACKAGE_xz-utils=y
-CONFIG_PARTED_READLINE=y
+CONFIG_PACKAGE_unzip=y
+CONFIG_PACKAGE_ttyd=y
+CONFIG_PACKAGE_runc=y
+CONFIG_PACKAGE_tini=y
+CONFIG_PACKAGE_losetup=y
+CONFIG_PACKAGE_lsblk=y
+CONFIG_PACKAGE_smartmontools=y
+CONFIG_PACKAGE_smartd=y
+CONFIG_PACKAGE_haproxy=y
+CONFIG_PACKAGE_geoview=y
+CONFIG_PACKAGE_blkid=y
+CONFIG_PACKAGE_boost=y
+CONFIG_PACKAGE_boost-program_options=y
+CONFIG_PACKAGE_boost-system=y
+
+##################################################
+# 12️⃣ QCOW2 / 编译优化 / Sing-box 构建选项
+##################################################
 CONFIG_QCOW2_IMAGES=y
 CONFIG_SING_BOX_BUILD_ACME=y
 CONFIG_SING_BOX_BUILD_CLASH_API=y
@@ -206,15 +266,9 @@ CONFIG_boost-compile-visibility-hidden=y
 CONFIG_boost-runtime-shared=y
 CONFIG_boost-static-and-shared-libs=y
 CONFIG_boost-variant-release=y
-CONFIG_shadow-all=y
-CONFIG_PACKAGE_dns2tcp=y
-CONFIG_PACKAGE_jq=y
-CONFIG_PACKAGE_libpcap=y
-CONFIG_PACKAGE_lua-neturl=y
-CONFIG_PACKAGE_mosdns=y
-CONFIG_PACKAGE_nping=y
-CONFIG_PACKAGE_shadowsocks-rust-sslocal=y
-CONFIG_PACKAGE_shadowsocksr-libev-ssr-check=y
-CONFIG_PACKAGE_shadowsocksr-libev-ssr-server=y
+
+##################################################
+# 13️⃣ PCAP / 捕获工具（未启用 netfilter / usb 支持）
+##################################################
 # CONFIG_PCAP_HAS_NETFILTER is not set
 # CONFIG_PCAP_HAS_USB is not set
