--- a/configs/luci/diy.config
+++ b/configs/luci/diy.config
@@ -55,7 +55,14 @@ CONFIG_PACKAGE_v2ray-plugin=y
 # 7️⃣ LuCI / 主题 / 工具库
 ##################################################
 CONFIG_PACKAGE_luci-theme-argon=y
+CONFIG_PACKAGE_luci-theme-kucat=y
 CONFIG_PACKAGE_luci-app-advancedplus=y
+CONFIG_PACKAGE_luci-app-quickstart=y
+CONFIG_PACKAGE_luci-app-kucat-config=y
+CONFIG_PACKAGE_luci-app-smartdns=y
+CONFIG_PACKAGE_luci-app-istorex=y
+CONFIG_PACKAGE_luci-app-socat=y
+CONFIG_PACKAGE_luci-app-tailscale=y
 
 ##################################################
 # 8️⃣ 系统 / 基础工具 / shell
