--- a/configs/luci/diy.config
+++ b/configs/luci/diy.config
@@ -107,5 +107,11 @@ CONFIG_TARGET_ROOTFS_PARTSIZE=1024
 CONFIG_ZSTD_OPTIMIZE_O3=y
 
 ##################################################
+# 13语言支持
+CONFIG_LUCI_LANG_en=y
+CONFIG_LUCI_LANG_zh-cn=y
+CONFIG_LUCI_LANG_zh-tw=y
+
+
 # 13️⃣ 移除未必要功能模块
 # 没有显式功能需求的模块如 netfilter / usb 支持保持移除
