--- a/configs/luci/Lite.config
+++ b/configs/luci/Lite.config
@@ -1,3 +1,6 @@
+CONFIG_LUCI_LANG_en=y
+CONFIG_LUCI_LANG_zh-cn=y
+CONFIG_LUCI_LANG_zh-tw=y
 ##################################################
 # 1️⃣ 内核 / cgroup / Docker 相关
 ##################################################
