--- a/configs/luci/diy.config
+++ b/configs/luci/diy.config
@@ -1,39 +1,39 @@
-# 1️⃣ 内核 / cgroup / Docker 相关
 ##################################################
-CONFIG_CGROUPFS_MOUNT_KERNEL_CGROUPS=y
-CONFIG_DOCKER_CGROUP_OPTIONS=y
-CONFIG_DOCKER_NET_MACVLAN=y
-CONFIG_DOCKER_OPTIONAL_FEATURES=y
+# 核心系统
+##################################################
+CONFIG_MODULES=y
 CONFIG_KERNEL_CGROUP_DEVICE=y
 CONFIG_KERNEL_CGROUP_FREEZER=y
-CONFIG_KERNEL_CGROUP_NET_PRIO=y
-CONFIG_KERNEL_MEMCG_SWAP_ENABLED=y
-CONFIG_KERNEL_TRANSPARENT_HUGEPAGE=y
+CONFIG_CGROUPFS_MOUNT_KERNEL_CGROUPS=y
+CONFIG_DOCKER_CGROUP_OPTIONS=y
+
+CONFIG_IPV6=y
+CONFIG_PACKAGE_busybox=y
+CONFIG_PACKAGE_bash=y
+CONFIG_PACKAGE_coreutils-nohup=y
+CONFIG_PACKAGE_opkg=y
 
 ##################################################
-# 2️⃣ IPv6 / 网络协议相关
+# LuCI 最小界面
 ##################################################
-CONFIG_IPV6=y
+CONFIG_PACKAGE_luci=y
+CONFIG_PACKAGE_luci-base=y
+CONFIG_PACKAGE_luci-compat=y
+CONFIG_PACKAGE_luci-lib-ip=y
+CONFIG_PACKAGE_luci-lib-jsonc=y
+CONFIG_PACKAGE_luci-theme-argon=y
+
+CONFIG_LUCI_LANG_en=y
+CONFIG_LUCI_LANG_zh-cn=y
+
+##################################################
+# 网络与 IPv6
+##################################################
 CONFIG_PACKAGE_luci-proto-ipv6=y
 CONFIG_PACKAGE_dhcp6c=y
 
 ##################################################
-# 3️⃣ 文件压缩 / 解压 / 归档工具
-##################################################
-CONFIG_PACKAGE_tar=y
-CONFIG_PACKAGE_unzip=y
-
-##################################################
-# 4️⃣ 文件系统 / 存储工具
-##################################################
-CONFIG_PACKAGE_fdisk=y
-CONFIG_PACKAGE_lsblk=y
-CONFIG_PACKAGE_mount-utils=y
-CONFIG_PACKAGE_parted=y
-CONFIG_PACKAGE_kmod-fs-btrfs=y
-
-##################################################
-# 5️⃣ 容器 / Docker 相关
+# Docker / 容器
 ##################################################
 CONFIG_PACKAGE_docker=y
 CONFIG_PACKAGE_dockerd=y
@@ -42,76 +42,40 @@ CONFIG_PACKAGE_luci-lib-docker=y
 CONFIG_PACKAGE_luci-app-dockerman=y
 
 ##################################################
-# 6️⃣ 网络代理 / VPN / 防火墙
+# VPN / 网络代理（核心保留）
 ##################################################
 CONFIG_PACKAGE_luci-app-passwall=y
 CONFIG_PACKAGE_luci-app-smartdns=y
 CONFIG_PACKAGE_luci-app-socat=y
-CONFIG_PACKAGE_sing-box=y
-CONFIG_PACKAGE_trojan-plus=y
-CONFIG_PACKAGE_v2ray-plugin=y
 
 ##################################################
-# 7️⃣ LuCI / 主题 / 工具库
+# 基础工具（文件系统 / 压缩 / 存储）
 ##################################################
-CONFIG_PACKAGE_luci-theme-argon=y
-CONFIG_PACKAGE_luci-theme-kucat=y
-CONFIG_PACKAGE_luci-app-advancedplus=y
-CONFIG_PACKAGE_luci-app-quickstart=y
-CONFIG_PACKAGE_quickstart=y
-CONFIG_PACKAGE_luci-app-kucat-config=y
-CONFIG_PACKAGE_luci-app-smartdns=y
-CONFIG_PACKAGE_luci-app-istorex=y
-CONFIG_PACKAGE_luci-app-socat=y
-CONFIG_PACKAGE_luci-app-tailscale=y
-CONFIG_PACKAGE_luci-i18n-advancedplus-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-quickstart-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-kucat-config-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-smartdns-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-istorex-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-socat-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-tailscale-zh-cn=y
+CONFIG_PACKAGE_tar=y
+CONFIG_PACKAGE_unzip=y
+CONFIG_PACKAGE_fdisk=y
+CONFIG_PACKAGE_lsblk=y
+CONFIG_PACKAGE_mount-utils=y
+CONFIG_PACKAGE_parted=y
 
 ##################################################
-# 8️⃣ 系统 / 基础工具 / shell
+# 可选优化与系统设置
 ##################################################
-CONFIG_PACKAGE_bash=y
-CONFIG_PACKAGE_coreutils-nohup=y
-
-##################################################
-# 9️⃣ 安全 / 加密 / 系统库
-##################################################
-CONFIG_PACKAGE_libcap=y
-CONFIG_PACKAGE_libseccomp=y
-CONFIG_PACKAGE_liblzo=y
-
-##################################################
-# 10️⃣ 代理 / VPN / 网络工具
-##################################################
-CONFIG_PACKAGE_shadowsocks-libev-ss-redir=y
-CONFIG_PACKAGE_ddns-go=y
-CONFIG_PACKAGE_chinadns-ng=y
-
-##################################################
-# 11️⃣ 系统服务 / 工具
-##################################################
-CONFIG_PACKAGE_smartmontools=y
-CONFIG_PACKAGE_haproxy=y
-
-##################################################
-# 12️⃣ QCOW2 / 编译优化 / Sing-box 构建选项
-##################################################
-CONFIG_QCOW2_IMAGES=y
-CONFIG_SING_BOX_BUILD_QUIC=y
 CONFIG_TARGET_ROOTFS_PARTSIZE=1024
 CONFIG_ZSTD_OPTIMIZE_O3=y
 
 ##################################################
-# 13语言支持
-CONFIG_LUCI_LANG_en=y
-CONFIG_LUCI_LANG_zh-cn=y
-CONFIG_LUCI_LANG_zh-tw=y
-
-
-# 13️⃣ 移除未必要功能模块
-# 没有显式功能需求的模块如 netfilter / usb 支持保持移除
+# 注释掉非必要模块（例如 USB、额外 LuCI 插件、额外语言包）
+##################################################
+# CONFIG_PACKAGE_luci-theme-kucat is not set
+# CONFIG_PACKAGE_luci-app-advancedplus is not set
+# CONFIG_PACKAGE_luci-app-quickstart is not set
+# CONFIG_PACKAGE_luci-app-kucat-config is not set
+# CONFIG_PACKAGE_luci-i18n-advancedplus-zh-cn is not set
+# CONFIG_PACKAGE_luci-i18n-quickstart-zh-cn is not set
+# CONFIG_PACKAGE_luci-i18n-kucat-config-zh-cn is not set
+# CONFIG_PACKAGE_luci-i18n-smartdns-zh-cn is not set
+# CONFIG_PACKAGE_luci-i18n-istorex-zh-cn is not set
+# CONFIG_PACKAGE_luci-i18n-socat-zh-cn is not set
+# CONFIG_PACKAGE_luci-i18n-tailscale-zh-cn is not set
+# CONFIG_PACKAGE_sing-box is optional, 可按需保留
