--- a/configs/luci/diy.config
+++ b/configs/luci/diy.config
@@ -2,8 +2,15 @@
 # 核心系统
 ##################################################
 CONFIG_MODULES=y
+
+# Cgroup 必备（Docker）
+CONFIG_KERNEL_CGROUPS=y
 CONFIG_KERNEL_CGROUP_DEVICE=y
 CONFIG_KERNEL_CGROUP_FREEZER=y
+CONFIG_KERNEL_CGROUP_SCHED=y
+CONFIG_KERNEL_CGROUP_PIDS=y
+CONFIG_KERNEL_CPUSETS=y
+CONFIG_KERNEL_NAMESPACES=y
 CONFIG_CGROUPFS_MOUNT_KERNEL_CGROUPS=y
 CONFIG_DOCKER_CGROUP_OPTIONS=y
 
@@ -42,9 +49,28 @@ CONFIG_PACKAGE_luci-lib-docker=y
 CONFIG_PACKAGE_luci-app-dockerman=y
 
 ##################################################
-# VPN / 网络代理（核心保留）
+# Passwall 完整依赖（最少集）
 ##################################################
 CONFIG_PACKAGE_luci-app-passwall=y
+
+# 关键依赖：必须，否则编译失败
+CONFIG_PACKAGE_haproxy=y
+CONFIG_PACKAGE_haproxy-pcre=y
+CONFIG_PACKAGE_libpcre=y
+CONFIG_PACKAGE_libpcre2=y
+
+# Passwall 必须的代理核心（至少开一个）
+CONFIG_PACKAGE_xray-core=y
+# CONFIG_PACKAGE_sing-box is not set （如果你想开可以加）
+
+# Passwall 的 DNS / 辅助
+CONFIG_PACKAGE_chinadns-ng=y
+CONFIG_PACKAGE_dns2socks=y
+CONFIG_PACKAGE_v2ray-geodata=y
+
+##################################################
+# SmartDNS / Socat
+##################################################
 CONFIG_PACKAGE_luci-app-smartdns=y
 CONFIG_PACKAGE_luci-app-socat=y
 
@@ -59,23 +85,7 @@ CONFIG_PACKAGE_mount-utils=y
 CONFIG_PACKAGE_parted=y
 
 ##################################################
-# 可选优化与系统设置
+# 优化
 ##################################################
 CONFIG_TARGET_ROOTFS_PARTSIZE=1024
 CONFIG_ZSTD_OPTIMIZE_O3=y
-
-##################################################
-# 注释掉非必要模块（例如 USB、额外 LuCI 插件、额外语言包）
-##################################################
-# CONFIG_PACKAGE_luci-theme-kucat is not set
-# CONFIG_PACKAGE_luci-app-advancedplus is not set
-# CONFIG_PACKAGE_luci-app-quickstart is not set
-# CONFIG_PACKAGE_luci-app-kucat-config is not set
-# CONFIG_PACKAGE_luci-i18n-advancedplus-zh-cn is not set
-# CONFIG_PACKAGE_luci-i18n-quickstart-zh-cn is not set
-# CONFIG_PACKAGE_luci-i18n-kucat-config-zh-cn is not set
-# CONFIG_PACKAGE_luci-i18n-smartdns-zh-cn is not set
-# CONFIG_PACKAGE_luci-i18n-istorex-zh-cn is not set
-# CONFIG_PACKAGE_luci-i18n-socat-zh-cn is not set
-# CONFIG_PACKAGE_luci-i18n-tailscale-zh-cn is not set
-# CONFIG_PACKAGE_sing-box is optional, 可按需保留
